Bug #34853 Disconnect + connect during sp 8 can lead to blocked connection
Submitted: 26 Feb 2008 18:57 Modified: 27 Apr 2008 11:25
Reporter: Jonas Oreland Email Updates:
Status: Closed
Category:Server: Cluster Severity:S3 (Non-critical)
Version:* OS:Any
Assigned to: Jonas Oreland Target Version:
Triage: D1 (Critical) / R2 (Low) / E3 (Medium)

[26 Feb 2008 18:57] Jonas Oreland
Description:
If a api node disconnect and reconnect during sp 8
(a small time period)

then the connection can be "blocked",
i.e QMGR thinks node is disconnected, but it is in fact connected.

this will block SUMA

How to repeat:
.

Suggested fix:
.
[27 Feb 2008 13:07] Jonas Oreland
quilt series

Attachment: bug34854.tar.gz (application/x-gzip, text), 5.89 KiB.

[27 Feb 2008 13:09] Jonas Oreland
version 2, aith autotest

Attachment: bug34854.tar.gz (application/x-gzip, text), 6.00 KiB.

[27 Feb 2008 13:18] Jonas Oreland
version 3 with minor? transporter fix

Attachment: bug34854.tar.gz (application/x-gzip, text), 6.25 KiB.

[27 Feb 2008 13:26] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/43048

ChangeSet@1.2190, 2008-02-27 14:26:46+01:00, jonas@perch.ndb.mysql.com +9 -0
  ndb - bug#34853
    Fix rare race-condition causing connections to be blocked,
      with 1427 as (possible) consequence
[25 Apr 2008 9:17] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/45995

ChangeSet@1.2586, 2008-04-25 11:17:15+02:00, jonas@perch.ndb.mysql.com +8 -0
  ndb - bug#34853 (port from drop6)
    Fix rare race-condition causing connections to be blocked
[25 Apr 2008 9:47] Bugs System
Pushed into 5.1.23-ndb-6.4.0
[25 Apr 2008 9:47] Bugs System
Pushed into 5.1.24-ndb-6.3.13
[25 Apr 2008 9:48] Bugs System
Pushed into 5.1.24-ndb-6.2.14
[27 Apr 2008 11:25] Jon Stephens
Documented in the 5.1.24-ndb-6.2.16 and 5.1.24-ndb-6.3.14 changelogs as follows:

        If an API node disconnected and then reconnected during Start Phase 8,
        then the connection could be 'blocked' - that is, the
        QMGR kernel block failed to detect that the API node
        was in fact connected to the cluster, causing issues with the
        NDB Subscription Manager (SUMA).
[12 Dec 2008 23:27] Bugs System
Pushed into 6.0.6-alpha  (revid:sp1r-jonas@perch.ndb.mysql.com-20080425091715-10459)
(version source revid:jonas@mysql.com-20080808094047-4e1yiarqa2t3opg3) (pib:5)