ndb - bug#34853 (port from drop6)   Fix rare race-condition causing connections to be blocked